Enabling CSRF Protection

--- a/Restaurantsreview/src/main/resources/templates/dashboard.html
+++ b/Restaurantsreview/src/main/resources/templates/dashboard.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html xmlns:th="http://thymeleaf.org">
 
 <head>
 
@@ -10,7 +10,12 @@
 
 <body>
 
-	<a href="/logout">LOGOUT </a>
+	<form action="/logout" method="post">
+	 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+		<button type="submit">Logout</button>
+
+	</form>
+
 
 </body>
 
